--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-07-13 04:13:02
+lastsearch = 2024-07-13 09:43:30
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -27,9 +27,9 @@ title = Bộ ga chun chần mặt Velina V16 - Forever Bedding
 url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v16
 
 [changagoidemsonghong.com]
-match = -14.3%%
-title = Chăn ga gối Home mã H18-056 Sale 40%%
-url = https://changagoidemsonghong.com/chan-ga-goi-home-h18-056
+match = -90.5%%
+title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22051
+url = https://changagoidemsonghong.com/chan-ga-goi-khong-chan-bc51
 
 [everonletrongtan.com]
 match = 19.0%%
@@ -42,9 +42,9 @@ title = Bộ chăn ga Everon SR-16
 url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16
 
 [www.diepxuan.com]
-match = -66.7%%
-title = Chăn ga gối xoa nhung - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/chan-ga-goi-xoa-nhung.html
+match = -81.0%%
+title = Điệp Xuân Bộ ga gối chun xoa 16 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 
 [everon365.vn]
 match = 33.3%%
