--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-13 06:45:45
+lastsearch = 2024-07-13 09:36:48
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -197,9 +197,9 @@ title = 06 15 22BET|100.000 người chơi - oppo StoreV4.7.4 - Catalog
 url = https://cokecatalog.com/card/06_15_22BET.shtm
 
 [shopee.vn]
-match = 20.0%%
-title = Chiếu Lác Trắng Xếp Gọn
-url = https://shopee.vn/Chiếu-Lác-Trắng-Xếp-Gọn-i.58697470.8505363108
+match = -226.7%%
+title = Bộ đồ nam cộc tay mặc hè DSQ cotton 4 chiều thêu logo ...
+url = https://shopee.vn/Bộ-đồ-nam-cộc-tay-mặc-hè-DSQ-cotton-4-chiều-thêu-logo-ngực-phối-in-hình-lá-phong-D2-monogram-BH119P-i.29600811.24469535417
 
 [katinat.vn]
 match = -160.0%%
