--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-13 04:32:09
+lastsearch = 2024-07-13 09:44:46
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -38,8 +38,8 @@ url = http://nangluctiengnhat.com/gods/start_person_supply_expression_helpful.xh
 
 [tuyensinh247.com]
 match = -225.0%%
-title = Một con lắc đơn có chiều dài xác định, khi treo vật có khối ...
-url = https://tuyensinh247.com/bai-tap-624929.html
+title = Một con lắc đơn có chiều dài dây treo l = 90 cm, khối lượng ...
+url = https://tuyensinh247.com/bai-tap-18187.html
 
 [hoanghaco.com.vn]
 match = -106.2%%
@@ -82,9 +82,9 @@ title = Turtle Beach USA
 url = https://www.turtlebeach.com/search?q=✅+TK88+✅TK88+Đăng+Ký+Thành+Viên✅✅+Copy_Tk88.co+✅+Nhà+cái+uy+tín+✅++Seopro
 
 [moon.vn]
-match = -206.2%%
-title = Con lắc đơn chiều dài l = 0,5 (m), m = 100 gam dao động ở ...
-url = https://moon.vn/hoi-dap/con-lac-don-chieu-dai-l-05-m-m-100-gam-dao-dong-o-noi-co-g-98-ms2-voi-bien-do-goc-ba-679117
+match = -193.8%%
+title = Một con lắc lò xo dao động điều hòa theo phương thẳng ...
+url = https://moon.vn/hoi-dap/mot-con-lac-lo-xo-dao-dong-dieu-hoa-theo-phuong-thang-dung-chieu-dai-tu-nhien-cua-lo-659716
 
 [djexpress.com.vn]
 match = -68.8%%
@@ -395,4 +395,29 @@ url = https://www.cantho.gov.vn/wps/portal/home/du-khach/chi-tiet/diem-tham-quan
 match = -193.8%%
 title = Gazetteer - United States Board on Geographic Names: ...
 url = https://books.google.com/books?id=Na-bLk2za5sC&pg=PA137&lpg=PA137&dq=chieu+lac+gam+18&source=bl&ots=rTT9NPFA40&sig=ACfU3U2yoVbi4o7cJXZ0I-7Bvpe59Ig6JQ&hl=en&sa=X&ved=2ahUKEwj374uP6qGHAxWf5MkDHXQaAEUQ6AF6BAgcEAM
+
+[g7tools.com]
+match = -175.0%%
+title = Cần Siết Lắc Léo Stahlwille 1/2" 504-2K/18N 13061018 ...
+url = https://g7tools.com/can-siet-lac-leo-flexible-handles-stahlwille-1-2-13061018-chieu-dai-397mm
+
+[www.ups.com]
+match = -31.2%%
+title = Locations | UPS - Vietnam
+url = https://www.ups.com/vn/en/locations.page
+
+[www.trapshooters.com]
+match = -43.8%%
+title = What does 18.7 bore equate to
+url = https://www.trapshooters.com/threads/what-does-18-7-bore-equate-to.84941/
+
+[olm.vn]
+match = -218.8%%
+title = Một mảnh đất hình thang có đáy lớn 27,6m, đáy bé bằng 2/ ...
+url = https://olm.vn/cau-hoi/mot-manh-dat-hinh-thang-co-day-lon-276m-day-be-bang-23-day-lon-chieu-cao-85m-nguoi-ta-trong-lac-tren-manh-dat-do-cu-1m-vuong-thu-duoc-3kg-lac-c.68946291283
+
+[sovhtt.caobang.gov.vn]
+match = -237.5%%
+title = Báo cáo về việc điều chỉnh cục bộ Đồ án điều chỉnh Quy hoạch ...
+url = https://sovhtt.caobang.gov.vn/Default.aspx?sid=1355&pageid=34288&catid=94914&id=858488&catname=quy-hoach-phuong-xa&title=bao-cao-ve-viec-dieu-chinh-cuc-bo-do-an-dieu-chinh-quy-hoach-chung-thi-tran-pac-miau-huyen-bao-l
 
