--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-13 02:17:09
+lastsearch = 2024-07-13 09:39:50
 
 [www.bible.com]
-match = 5.9%%
-title = Matthew 20:22-28 NKJV
-url = https://www.bible.com/bible/114/MAT.20.22-28.NKJV
+match = 23.1%%
+title = sawltak 20:22
+url = https://www.bible.com/bible/368/ACT.20.22.TDB
 
 [mizobibleblog.wordpress.com]
-match = -88.2%%
-title = Sam 1-50 - Mizo BIBle - WordPress.com
-url = https://mizobibleblog.wordpress.com/2017/02/26/sam-1-50/
+match = -123.5%%
+title = Thufingte 1-31 - Mizo BIBle - WordPress.com
+url = https://mizobibleblog.wordpress.com/2017/02/26/thufingte-1-31/
 
 [www.biblegateway.com]
 match = -129.4%%
@@ -47,9 +47,9 @@ title = Air Fittings & Tubing
 url = https://www.smcpneumatics.com/pdfs/smc/70AIFITTINGS.pdf
 
 [www.bibleref.com]
-match = -23.5%%
-title = What does Matthew 20:22 mean?
-url = https://www.bibleref.com/Matthew/20/Matthew-20-22.html
+match = 0.0%%
+title = 
+url = https://www.bibleref.com/Mark/2/Mark-2-22.html
 
 [www.youtube.com]
 match = -217.6%%
