--- a/images/ruot-goi-ke-warmdream-50x70/config.ini
+++ b/images/ruot-goi-ke-warmdream-50x70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-warmdream-50x70.html
 lastopen = 2024-07-01 12:33:15
 
 [search]
-lastsearch = 2024-07-13 05:32:42
+lastsearch = 2024-07-13 09:41:10
 
 [shope.io.vn]
 match = -59.3%%
@@ -12,9 +12,9 @@ title = Ruột gối đầu họa tiết kẻ VANDA bông gòn cao cấp màu HO
 url = https://shope.io.vn/ruot-goi-dau-hoa-tiet-ke-vanda-bong-gon-cao-cap-mau-hot-cap-nhat-lien-tuc-ma-sc55-8
 
 [www.diepxuan.com]
-match = 7.4%%
-title = Điệp Xuân Ruột gối kê caosu 45x65 Felix
-url = https://www.diepxuan.com/ruot-goi-ke-caosu-45x65-felix.html
+match = 29.6%%
+title = Ruột gối kê WDR lông vũ - Điệp Xuân
+url = https://www.diepxuan.com/ruot-goi-ke-wdr-long-vu.html
 
 [giasale.com]
 match = -59.3%%
