--- a/images/tham-bali-180x230/config.ini
+++ b/images/tham-bali-180x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-180x230.html
 lastopen = 2024-06-07 00:36:20
 
 [search]
-lastsearch = 2024-07-13 06:12:52
+lastsearch = 2024-07-13 09:39:19
 
 [www.noithatpassion.com]
 match = -129.4%%
@@ -60,4 +60,9 @@ url = https://www.pinterest.com/pin/our-front-yard-for-a-few-days-on-bali-in-the
 match = 0.0%%
 title = 
 url = https://www.linkedin.com/pulse/discover-exact-location-bali-island-where-located-map-simon-st-john-chrjc
+
+[y1ty6kkc.com]
+match = -288.2%%
+title = thomas jefferson school - 纽约华人资讯网News educations days
+url = http://y1ty6kkc.com/index3.php?name=https://xn--80apbkdj.xn--p1ai/84956327vpukxyzsbsv4fe36a
 
