--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-07-13 06:15:31
+lastsearch = 2024-07-13 10:35:04
 
 [bedding.vn]
 match = -123.1%%
@@ -37,9 +37,9 @@ title = Chun Lu
 url = https://scholar.google.co.uk/citations?user=ufM1QgQAAAAJ&hl=th
 
 [www.linkedin.com]
-match = -230.8%%
-title = Joanne Chun - University of California, San Francisco
-url = https://www.linkedin.com/in/joanne-k-chun
+match = -200.0%%
+title = Justin Chun - Irvine, California, United States
+url = https://www.linkedin.com/in/justin-chun-b9aa732b3
 
 [hanvico.com.vn]
 match = -69.2%%
@@ -325,4 +325,9 @@ url = https://calbears.com/news/2024/4/14/mens-golf-cal-heads-to-western-interco
 match = -223.1%%
 title = Ga chun trần sợi lạnh Kaiyo, màu xanh, kích thước ...
 url = https://www.kaiyovietnam.vn/ga-chun-tran-soi-lanh-kaiyo-mau-xanh-kich-thuoc-200x220cm
+
+[m.facebook.com]
+match = -92.3%%
+title = UC Davis Dining Services's post
+url = https://m.facebook.com/UCDavisDiningServices/posts/5300015376740751/
 
