--- a/images/nem-everon-180x200x09-goodsleep/config.ini
+++ b/images/nem-everon-180x200x09-goodsleep/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x09-goodsleep.html
 lastopen = 2024-06-06 17:10:33
 
 [search]
-lastsearch = 2024-07-13 04:17:11
+lastsearch = 2024-07-13 10:37:14
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -19,7 +19,7 @@ url = https://www.everonvn.vn/chi-tiet/dem-good-sleep.html
 [www.amazon.com]
 match = -6.5%%
 title = Amazon.com: Customer Questions & Answers
-url = https://www.amazon.com/ask/questions/asin/B01ED3GRN8
+url = https://www.amazon.com/ask/questions/asin/B00EM9RHB0/1/ref=ask_ql_psf_ql_hza?sort=SUBMIT_DATE
 
 [www.dropzone.com]
 match = -54.8%%
