--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-13 11:44:25
+lastsearch = 2024-07-13 14:49:50
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -12,9 +12,9 @@ title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [www.youtube.com]
-match = -142.9%%
-title = TIÊU ĐIỂM: Mỹ công bố về “trò chơi mới”, Nga dọa hành động ...
-url = https://www.youtube.com/watch?v=2O2w6QrMVeI
+match = -161.9%%
+title = 20240216 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞
+url = https://www.youtube.com/watch?v=ghjt9vaH10I
 
 [roc-taiwan.org]
 match = -66.7%%
@@ -22,9 +22,9 @@ title = THỦ TỤC LÀM HỘ CHIẾU ĐÀI LOAN VÀ VISA NHẬP CẢN...
 url = https://roc-taiwan.org/vnsgn_en/post/79.html
 
 [shopee.vn]
-match = -42.9%%
-title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
-url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
+match = -57.1%%
+title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
+url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
 
 [www.taiwanembassy.org]
 match = -19.0%%
@@ -62,9 +62,9 @@ title = Địa lý Đài Loan
 url = https://vi.wikipedia.org/wiki/Địa_lý_Đài_Loan
 
 [trithucvn.co]
-match = -119.0%%
-title = Cựu bác sĩ Nhà Trắng muốn ông Joe Biden kiểm tra chất ...
-url = https://trithucvn.co/the-gioi/cuu-bac-si-nha-trang-muon-ong-joe-biden-kiem-tra-chat-kich-thich.html
+match = -138.1%%
+title = Đài Loan cảnh giác với 'làn sóng' thử tên lửa tại miền bắc ...
+url = https://trithucvn.co/the-gioi/dai-loan-canh-giac-voi-lan-song-thu-ten-lua-tai-mien-bac-trung-quoc.html
 
 [xuatnhapcanh.gov.vn]
 match = -66.7%%
@@ -77,9 +77,9 @@ title = Lịch bay Đài Loan 2024 - Tra cứu chuyến bay mới nhất ...
 url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan
 
 [visana.vn]
-match = -114.3%%
-title = Trọn bộ hồ sơ, thủ tục xin visa Đài Loan mới nhất - VISANA
-url = https://visana.vn/visa-dai-loan/
+match = -119.0%%
+title = Tất tần tật những điều cần biết về visa Quan Hồng Đài Loan
+url = https://visana.vn/visa-quan-hong-dai-loan/
 
 [www.tiktok.com]
 match = -9.5%%
@@ -165,4 +165,9 @@ url = https://www.instagram.com/toiodailoan/p/C8MQfOfxc1N/
 match = -90.5%%
 title = đường dây cá độ bóng đá bị bắt|Chơi Cá Cược Online
 url = https://www.hcmulaw.edu.vn/card/2024-07-09-0OSNa1Dcoi trực tiếp vtv6.html
+
+[tuoitre.vn]
+match = -109.5%%
+title = Đài Loan theo dõi sát đợt thử tên lửa mới của Trung Quốc
+url = https://tuoitre.vn/dai-loan-theo-doi-sat-dot-thu-ten-lua-moi-cua-trung-quoc-20240713134043306.htm
 
