--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-13 10:44:49
+lastsearch = 2024-07-13 14:45:36
 
 [screenrant.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Duy Long - Chàng trai xanh lá quyết theo đuổi nữ chính từ ..
 url = https://www.facebook.com/NguoiAyLaAi.VieChannel/videos/duy-long-chàng-trai-xanh-lá-quyết-theo-đuổi-nữ-chính-từ-show-ra-đời-thật-người-ấ/425027899585078/
 
 [www.youtube.com]
-match = -100.0%%
-title = Resident Evil - Chris 10: New guns!
-url = https://www.youtube.com/watch?v=PeT3ic6LphU
+match = -200.0%%
+title = FIX: VIDEO DXGKRNL FATAL ERROR in Windows 10/11 ...
+url = https://www.youtube.com/watch?v=7yEnuxJqQKg
 
 [www.reddit.com]
 match = -64.3%%
@@ -87,9 +87,9 @@ title = Green card
 url = https://en.wikipedia.org/wiki/Green_card
 
 [www.imdb.com]
-match = 0.0%%
-title = Blue Bayou (2021)
-url = https://www.imdb.com/title/tt11121664/
+match = 7.1%%
+title = The Mask (1994)
+url = https://www.imdb.com/title/tt0110475/
 
 [www.boundless.com]
 match = -128.6%%
@@ -227,8 +227,8 @@ title = Do the Israelis really have a 10th man doctrine?
 url = https://www.quora.com/World-War-Z-2013-movie-Do-the-Israelis-really-have-a-10th-man-doctrine
 
 [atlasorganization.com]
-match = -7.1%%
-title = Tenth Man Advisory
+match = 0.0%%
+title = 
 url = https://atlasorganization.com/tenthman
 
 [www.usgbc.org]
