--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-07-13 12:48:00
+lastsearch = 2024-07-13 14:46:49
 
 [erado.vn]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Váy Giường Nữ Hoàng 18 Inch Thả
 url = https://vietnamese.alibaba.com/g/bed-skirts-queen-18-inch-drop.html
 
 [noithattana.vn]
-match = -135.0%%
-title = Bộ giường ngủ nhập khẩu Đài Loan, cao cấp sang trọng nhất
-url = https://noithattana.vn/giuong-ngu/
+match = -115.0%%
+title = Bộ giường ngủ hiện đại nhập khẩu - Mẫu giường tủ gỗ đẹp ...
+url = https://noithattana.vn/giuong-tu-hien-dai/
 
 [tiki.vn]
 match = -50.0%%
