--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-13 13:46:26
+lastsearch = 2024-07-13 15:19:35
 
 [vinatools.com]
 match = -206.7%%
@@ -47,9 +47,9 @@ title = Cowon D2 gia nhập 'câu lạc bộ 16 GB'
 url = https://vnexpress.net/cowon-d2-gia-nhap-cau-lac-bo-16-gb-1500501.html
 
 [www.facebook.com]
-match = -100.0%%
-title = Feb 29
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132
+match = -30.0%%
+title = 29 tháng 2
+url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
 
 [banhang.shopee.vn]
 match = -66.7%%
