--- a/images/tham-giuong-bode-150x190/config.ini
+++ b/images/tham-giuong-bode-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bode-150x190.html
 lastopen = 2024-06-17 17:46:25
 
 [search]
-lastsearch = 2024-07-13 11:45:57
+lastsearch = 2024-07-13 15:14:20
 
 [www.diepxuan.com]
-match = 45.8%%
-title = Điệp Xuân Thảm giường Bode 160x200
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
+match = 20.8%%
+title = Thảm giường nỉ 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [www.tripadvisor.com]
 match = -25.0%%
