--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-07-13 14:51:16
+lastsearch = 2024-07-13 15:30:14
 
 [shopee.vn]
 match = 2.9%%
-title = Chiếu điều hoà cao su non 3D chống nóng lưng kèm 2 vỏ ...
-url = https://shopee.vn/Chiếu-điều-hoà-cao-su-non-3D-chống-nóng-lưng-kèm-2-vỏ-gối-nằm-kích-thước-1m6x2m-1m8x2m-i.623633.16760413116
+title = Chiếu Điều hoà cao su non siêu mát siêu xịn hàng chuẩn ...
+url = https://shopee.vn/Chiếu-Điều-hoà-cao-su-non-siêu-mát-siêu-xịn-hàng-chuẩn-loại-1-i.76119098.3432322614
 
 [olbedding.com]
 match = 11.8%%
@@ -42,9 +42,9 @@ title = Chiếu Cao Su Non Có Tốt Không?
 url = https://khonemtonghop.com/chieu-cao-su-non-co-tot-khong/
 
 [suongtuyet.com]
-match = 17.6%%
-title = có nên sử dụng chiếu điều hòa không?
-url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
+match = 2.9%%
+title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào ...
+url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
 
 [www.olbedding.com]
 match = 11.8%%
