--- a/images/ruot-nem-korea-160x200x09/config.ini
+++ b/images/ruot-nem-korea-160x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-160x200x09.html
 lastopen = 2024-06-10 12:38:50
 
 [search]
-lastsearch = 2024-07-13 13:38:08
+lastsearch = 2024-07-13 15:35:40
 
 [www.diepxuan.com]
 match = 28.0%%
@@ -105,4 +105,9 @@ url = https://blog.uceap.universityofcalifornia.edu/black-womans-guide-south-kor
 match = 0.0%%
 title = 
 url = https://www.ciee.org/go-abroad/college-study-abroad/blog/my-experience-being-black-woman-south-korea
+
+[www.klook.com]
+match = 0.0%%
+title = 
+url = https://www.klook.com/en-US/blog/how-to-apply-for-south-korea-q-code/
 
