--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-13 11:20:17
+lastsearch = 2024-07-13 15:36:21
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -27,9 +27,9 @@ title = notice on public participation & accessibility
 url = https://www.southpasadenaca.gov/files/assets/public/v/1/police/documents/agenda-packet-combined-092.pdf
 
 [www.cia.gov]
-match = -139.1%%
-title = Declassified in Part - Sanitized Copy Approved for Release 2016 ...
-url = https://www.cia.gov/readingroom/docs/DOC_0006007790.pdf
+match = -69.6%%
+title = THE PRESIDENT'S DAILY BRIEF 13 AUGUST 1974 - FOIA
+url = https://www.cia.gov/readingroom/document/0006007790
 
 [8tharmy.korea.army.mil]
 match = -108.7%%
