--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-13 13:34:37
+lastsearch = 2024-07-13 15:37:12
 
 [shopee.vn]
-match = -70.8%%
-title = [ 🔥 Mẫu mới 🔥 ] Thảm lau chân cao cấp hàng loại 1 lông ...
-url = https://shopee.vn/-🔥-Mẫu-mới-🔥-Thảm-lau-chân-cao-cấp-hàng-loại-1-lông-cừu-siêu-mềm-mại-thấm-hút-tốt-40x60-GIÁ-SỐC--i.189593580.14011936530
+match = -25.0%%
+title = Thảm Chùi Chân Lông Xù Loang Đế Chống Trượt ...
+url = https://shopee.vn/Thảm-Chùi-Chân-Lông-Xù-Loang-Đế-Chống-Trượt-Combani-Kích-Thước-40x60-i.191529566.21231533396
 
 [lepetit.com.vn]
 match = -66.7%%
-title = Thảm lau chân lông xù màu trơn thấm nước, chống trượt ...
-url = https://lepetit.com.vn/tham-long-xu-chu-nhat-ma-u-tron-tham-nuoc-chong-truot-40x60-cm
+title = Thảm lau chân lông xù hình học thấm nước, chống trượt ...
+url = https://lepetit.com.vn/tham-long-xu-chu-nha-t-ke-hi-nh-tha-m-nuo-c-cho-ng-truo-t-40x60-cm
 
 [tiki.vn]
 match = -54.2%%
