--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-07-13 14:11:52
+lastsearch = 2024-07-13 16:14:18
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -187,7 +187,12 @@ title = Bản đồ website Dropbiz
 url = https://dropbiz.vn/ban-do-website-droppii
 
 [m.facebook.com]
-match = -82.1%%
-title = Rao vặt An Hữu - Cái Bè | Serum phục hồi trẻ hóa da đỉnh nhất ...
-url = https://m.facebook.com/groups/1958199444409629/posts/3858948817668006/
+match = 12.5%%
+title = Chợ 434 | ‼️THUẬN AN….
+url = https://m.facebook.com/groups/cho434/posts/873929537936678/
+
+[www.instagram.com]
+match = -64.3%%
+title = Ruiqi Dai 戴睿琦 | Hotshop day #glassblowing #glass ...
+url = https://www.instagram.com/ruiqidai/p/B1iyIMOAhfx/
 
